--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
+.mvn/
 mvnw
 mvnw.cmd
 HELP.md
 !**/src/main/**/target/
 !**/src/test/**/target/
+/src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
